--- a/app/src/main/res/layout/activity_new_schedule.xml
+++ b/app/src/main/res/layout/activity_new_schedule.xml
@@ -23,6 +23,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="1dp"
+            android:text="Schedule Name:"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent" />
+        <EditText
+            android:textColor="#FFFFFF"
+            android:layout_height="match_parent"
+            android:id="@+id/scheduleNameEditText"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="1dp"
+            android:backgroundTint="#6D6D6D"
+            android:ems="10"
+            android:inputType="textAutoComplete"
+            app:layout_constraintStart_toEndOf="@+id/textView2"/>
+
+
+    </LinearLayout>
+
 
     <ListView
         android:id="@+id/checkedList"
