--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="AppTheme.Wallpaper" parent="@style/Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">#00ffffff</item>
         <item name="android:windowShowWallpaper">true</item>
         <item name="android:navigationBarColor">#00ffffff</item>
         <item name="colorPrimaryDark">#00ffffff</item>
