--- a/app/src/main/res/layout/app_stats_item.xml
+++ b/app/src/main/res/layout/app_stats_item.xml
@@ -44,7 +44,7 @@
                     android:layout_gravity="center"
                     app:max="1440"
                     app:ringColor="#9B9B9B"
-                    app:ringProgressColor="@color/colorAccent"
+                    app:ringProgressColor="#303030"
                     app:ringWidth="6dp"
                     app:style="STROKE"
                     app:textColor="@android:color/black"
@@ -55,7 +55,7 @@
 
                 <Space
                     android:layout_width="match_parent"
-                    android:layout_height="20dp" />
+                    android:layout_height="10dp" />
 
                 <TextView
                     android:id="@+id/app_name_item"
@@ -63,8 +63,18 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="App Name"
-                    android:textColor="@android:color/darker_gray"
+                    android:textColor="#4B4B4B"
                     android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/app_usage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="23 min"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
